--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ "new" ]
+    branches: [ "925" ]
   pull_request:
-    branches: [ "new" ]
+    branches: [ "925" ]
 
 jobs:
   build:
